# ModSnort

./: CMakeLists.txt  Makefile  config.h  config.status  libtool  snort.pc
doc/: Makefile
etc/: Makefile
m4/: Makefile
preproc_rules/: Makefile
rpm/: Makefile
src/: Makefile  decode.h  fpcreate.h  fpdetect.h  hashstring.h  ipv6_port.h  parser.h  pcrm.h  plugbase.h  rules.h  sfthreshold.h  snort.h  util.h
src/control/: Makefile  sfcontrol.c
src/detection-plugins/: Makefile  detection_leaf_node.c  detection_options.c  detection_options.h  sf_snort_plugin_hdropts.c  sp_appid.c  sp_asn1.c  sp_asn1_detect.c  sp_base64_data.c  sp_base64_decode.c  sp_byte_check.h  sp_byte_extract.h  sp_byte_jump.h  sp_flowbits.h  sp_hdr_opt_wrap.h  sp_ip_proto.h  sp_pattern_match.h
src/dynamic-examples/: Makefile
src/dynamic-examples/dynamic-preprocessor/: Makefile
src/dynamic-examples/dynamic-rule/: Makefile
src/dynamic-output/: Makefile
src/dynamic-output/libs/: Makefile  libsf_dynamic_output.la  snort_output.pc
src/dynamic-output/libs/.libs/: libsf_dynamic_output.lai
src/dynamic-output/plugins/: Makefile
src/dynamic-plugins/: Makefile  sp_dynamic.h  sp_preprocopt.h
src/dynamic-plugins/sf_engine/: Makefile  libsf_engine.la  sf_snort_plugin_api.h
src/dynamic-plugins/sf_engine/.libs/: libsf_engine.lai  libsf_engine.so.0.0.0
src/dynamic-plugins/sf_engine/examples/: Makefile
src/dynamic-plugins/sf_preproc_example/: Makefile
src/dynamic-preprocessors/: Makefile  libsf_dynamic_preproc.la
src/dynamic-preprocessors/.libs/: libsf_dynamic_preproc.lai
src/dynamic-preprocessors/appid/: Makefile
src/dynamic-preprocessors/dcerpc2/: Makefile  libsf_dce2_preproc.la
src/dynamic-preprocessors/dcerpc2/.libs/: libsf_dce2_preproc.so.0.0.0
src/dynamic-preprocessors/dnp3/: Makefile  libsf_dnp3_preproc.la
src/dynamic-preprocessors/dns/: Makefile  libsf_dns_preproc.la
src/dynamic-preprocessors/dns/.libs/: libsf_dns_preproc.so.0.0.0
src/dynamic-preprocessors/file/: Makefile
src/dynamic-preprocessors/ftptelnet/: Makefile  libsf_ftptelnet_preproc.la
src/dynamic-preprocessors/ftptelnet/.libs/: libsf_ftptelnet_preproc.so.0.0.0
src/dynamic-preprocessors/gtp/: Makefile  libsf_gtp_preproc.la
src/dynamic-preprocessors/gtp/.libs/: libsf_gtp_preproc.lai  libsf_gtp_preproc.so.0.0.0
src/dynamic-preprocessors/imap/: Makefile  libsf_imap_preproc.la
src/dynamic-preprocessors/imap/.libs/: libsf_imap_preproc.lai
src/dynamic-preprocessors/libs/: Makefile  snort_preproc.pc
src/dynamic-preprocessors/modbus/: Makefile  libsf_modbus_preproc.la
src/dynamic-preprocessors/modbus/.libs/: libsf_modbus_preproc.so.0.0.0
src/dynamic-preprocessors/pop/: Makefile  libsf_pop_preproc.la
src/dynamic-preprocessors/pop/.libs/: libsf_pop_preproc.so.0.0.0
src/dynamic-preprocessors/reputation/: Makefile  libsf_reputation_preproc.la
src/dynamic-preprocessors/sdf/: Makefile  libsf_sdf_preproc.la
src/dynamic-preprocessors/sip/: Makefile  libsf_sip_preproc.la
src/dynamic-preprocessors/smtp/: Makefile  libsf_smtp_preproc.la
src/dynamic-preprocessors/ssh/: Makefile  libsf_ssh_preproc.la
src/dynamic-preprocessors/ssh/.libs/: libsf_ssh_preproc.lai
src/dynamic-preprocessors/ssl/: Makefile  libsf_ssl_preproc.la
src/dynamic-preprocessors/ssl/.libs/: libsf_ssl_preproc.lai  libsf_ssl_preproc.so.0.0.0
src/file-process/: Makefile
src/file-process/libs/: Makefile
src/output-plugins/: Makefile
src/parser/: IpAddrSet.h  Makefile
src/preprocessors/: Makefile  perf-base.h  perf-event.h  perf-flow.h  perf.h  session_api.h  sfprocpidstats.h  stream_api.h
src/preprocessors/HttpInspect/: Makefile
src/preprocessors/HttpInspect/anomaly_detection/: Makefile
src/preprocessors/HttpInspect/client/: Makefile
src/preprocessors/HttpInspect/event_output/: Makefile
src/preprocessors/HttpInspect/files/: Makefile
src/preprocessors/HttpInspect/include/: Makefile
src/preprocessors/HttpInspect/mode_inspection/: Makefile
src/preprocessors/HttpInspect/normalization/: Makefile
src/preprocessors/HttpInspect/server/: Makefile
src/preprocessors/HttpInspect/session_inspection/: Makefile
src/preprocessors/HttpInspect/user_interface/: Makefile
src/preprocessors/HttpInspect/utils/: Makefile
src/preprocessors/Session/: Makefile
src/preprocessors/Stream6/: Makefile
src/sfutil/: Makefile  bitop_funcs.h  sfActionQueue.h  sfPolicy.h  sfPolicyData.h  sfPolicyUserData.h  sf_base64decode.h  sf_ip.h  sf_sechash.h  sf_vartable.h  sfrf.h  sfrt.h  sfthd.h  util_unfold.h
src/side-channel/: Makefile
src/side-channel/dynamic-plugins/: Makefile  snort_side_channel.pc
src/side-channel/plugins/: Makefile
src/target-based/: Makefile  sftarget_protocol_reference.h  sftarget_reader.h
src/win32/: Makefile
templates/: Makefile
tools/: Makefile
tools/control/: Makefile
tools/file_server/: Makefile
tools/u2boat/: Makefile  u2boat
tools/u2boat/.deps/: u2boat-u2boat.Po
tools/u2openappid/: Makefile
tools/u2spewfoo/: Makefile  u2spewfoo
tools/u2streamer/: Makefile
