cmake_minimum_required(VERSION 3.5)
project(snort_2_9_8_0)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/control/sfcontrol.c
    src/control/sfcontrol.h
    src/control/sfcontrol_funcs.h
    src/detection-plugins/detection_leaf_node.c
    src/detection-plugins/detection_options.c
    src/detection-plugins/detection_options.h
    src/detection-plugins/sf_decompression.h
    src/detection-plugins/sf_snort_packet.h
    src/detection-plugins/sf_snort_plugin_api.h
    src/detection-plugins/sf_snort_plugin_hdropts.c
    src/detection-plugins/sp_appid.c
    src/detection-plugins/sp_appid.h
    src/detection-plugins/sp_asn1.c
    src/detection-plugins/sp_asn1.h
    src/detection-plugins/sp_asn1_detect.c
    src/detection-plugins/sp_asn1_detect.h
    src/detection-plugins/sp_base64_data.c
    src/detection-plugins/sp_base64_data.h
    src/detection-plugins/sp_base64_decode.c
    src/detection-plugins/sp_base64_decode.h
    src/detection-plugins/sp_byte_check.c
    src/detection-plugins/sp_byte_check.h
    src/detection-plugins/sp_byte_extract.c
    src/detection-plugins/sp_byte_extract.h
    src/detection-plugins/sp_byte_jump.c
    src/detection-plugins/sp_byte_jump.h
    src/detection-plugins/sp_clientserver.c
    src/detection-plugins/sp_clientserver.h
    src/detection-plugins/sp_cvs.c
    src/detection-plugins/sp_cvs.h
    src/detection-plugins/sp_dsize_check.c
    src/detection-plugins/sp_dsize_check.h
    src/detection-plugins/sp_file_data.c
    src/detection-plugins/sp_file_data.h
    src/detection-plugins/sp_file_type.c
    src/detection-plugins/sp_file_type.h
    src/detection-plugins/sp_flowbits.c
    src/detection-plugins/sp_flowbits.h
    src/detection-plugins/sp_ftpbounce.c
    src/detection-plugins/sp_ftpbounce.h
    src/detection-plugins/sp_hdr_opt_wrap.c
    src/detection-plugins/sp_hdr_opt_wrap.h
    src/detection-plugins/sp_icmp_code_check.c
    src/detection-plugins/sp_icmp_code_check.h
    src/detection-plugins/sp_icmp_id_check.c
    src/detection-plugins/sp_icmp_id_check.h
    src/detection-plugins/sp_icmp_seq_check.c
    src/detection-plugins/sp_icmp_seq_check.h
    src/detection-plugins/sp_icmp_type_check.c
    src/detection-plugins/sp_icmp_type_check.h
    src/detection-plugins/sp_ip_fragbits.c
    src/detection-plugins/sp_ip_fragbits.h
    src/detection-plugins/sp_ip_id_check.c
    src/detection-plugins/sp_ip_id_check.h
    src/detection-plugins/sp_ip_proto.c
    src/detection-plugins/sp_ip_proto.h
    src/detection-plugins/sp_ip_same_check.c
    src/detection-plugins/sp_ip_same_check.h
    src/detection-plugins/sp_ip_tos_check.c
    src/detection-plugins/sp_ip_tos_check.h
    src/detection-plugins/sp_ipoption_check.c
    src/detection-plugins/sp_ipoption_check.h
    src/detection-plugins/sp_isdataat.c
    src/detection-plugins/sp_isdataat.h
    src/detection-plugins/sp_pattern_match.c
    src/detection-plugins/sp_pattern_match.h
    src/detection-plugins/sp_pcre.c
    src/detection-plugins/sp_pcre.h
    src/detection-plugins/sp_pkt_data.c
    src/detection-plugins/sp_pkt_data.h
    src/detection-plugins/sp_react.c
    src/detection-plugins/sp_react.h
    src/detection-plugins/sp_replace.c
    src/detection-plugins/sp_replace.h
    src/detection-plugins/sp_respond.h
    src/detection-plugins/sp_respond3.c
    src/detection-plugins/sp_rpc_check.c
    src/detection-plugins/sp_rpc_check.h
    src/detection-plugins/sp_session.c
    src/detection-plugins/sp_session.h
    src/detection-plugins/sp_tcp_ack_check.c
    src/detection-plugins/sp_tcp_ack_check.h
    src/detection-plugins/sp_tcp_flag_check.c
    src/detection-plugins/sp_tcp_flag_check.h
    src/detection-plugins/sp_tcp_seq_check.c
    src/detection-plugins/sp_tcp_seq_check.h
    src/detection-plugins/sp_tcp_win_check.c
    src/detection-plugins/sp_tcp_win_check.h
    src/detection-plugins/sp_ttl_check.c
    src/detection-plugins/sp_ttl_check.h
    src/detection-plugins/sp_urilen_check.c
    src/detection-plugins/sp_urilen_check.h
    src/dynamic-examples/dynamic-preprocessor/sf_preproc_info.h
    src/dynamic-examples/dynamic-preprocessor/spp_example.c
    src/dynamic-examples/dynamic-rule/detection_lib_meta.h
    src/dynamic-examples/dynamic-rule/rules.c
    src/dynamic-examples/dynamic-rule/sid109.c
    src/dynamic-examples/dynamic-rule/sid637.c
    src/dynamic-output/libs/output_lib.c
    src/dynamic-output/plugins/output.h
    src/dynamic-output/plugins/output_api.h
    src/dynamic-output/plugins/output_base.c
    src/dynamic-output/plugins/output_common.h
    src/dynamic-output/plugins/output_lib.h
    src/dynamic-output/plugins/output_plugin.c
    src/dynamic-plugins/sf_engine/examples/sfsnort_dynamic_detection_lib.c
    src/dynamic-plugins/sf_engine/examples/sfsnort_dynamic_detection_lib.h
    src/dynamic-plugins/sf_engine/bmh.c
    src/dynamic-plugins/sf_engine/bmh.h
    src/dynamic-plugins/sf_engine/ipv6_port.h
    src/dynamic-plugins/sf_engine/md5.c
    src/dynamic-plugins/sf_engine/md5.h
    src/dynamic-plugins/sf_engine/preprocids.h
    src/dynamic-plugins/sf_engine/sf_decompression.c
    src/dynamic-plugins/sf_engine/sf_decompression.h
    src/dynamic-plugins/sf_engine/sf_ip.c
    src/dynamic-plugins/sf_engine/sf_ip.h
    src/dynamic-plugins/sf_engine/sf_iph.h
    src/dynamic-plugins/sf_engine/sf_protocols.h
    src/dynamic-plugins/sf_engine/sf_sechash.c
    src/dynamic-plugins/sf_engine/sf_sechash.h
    src/dynamic-plugins/sf_engine/sf_snort_detection_engine.c
    src/dynamic-plugins/sf_engine/sf_snort_detection_engine.h
    src/dynamic-plugins/sf_engine/sf_snort_packet.h
    src/dynamic-plugins/sf_engine/sf_snort_plugin_api.c
    src/dynamic-plugins/sf_engine/sf_snort_plugin_api.h
    src/dynamic-plugins/sf_engine/sf_snort_plugin_byte.c
    src/dynamic-plugins/sf_engine/sf_snort_plugin_content.c
    src/dynamic-plugins/sf_engine/sf_snort_plugin_hdropts.c
    src/dynamic-plugins/sf_engine/sf_snort_plugin_loop.c
    src/dynamic-plugins/sf_engine/sf_snort_plugin_pcre.c
    src/dynamic-plugins/sf_engine/sf_snort_plugin_rc4.c
    src/dynamic-plugins/sf_engine/sf_types.h
    src/dynamic-plugins/sf_engine/sfghash.c
    src/dynamic-plugins/sf_engine/sfghash.h
    src/dynamic-plugins/sf_engine/sfhashfcn.c
    src/dynamic-plugins/sf_engine/sfhashfcn.h
    src/dynamic-plugins/sf_engine/sfprimetable.c
    src/dynamic-plugins/sf_engine/sfprimetable.h
    src/dynamic-plugins/sf_engine/sha2.c
    src/dynamic-plugins/sf_engine/sha2.h
    src/dynamic-plugins/sf_engine/snort_debug.h
    src/dynamic-plugins/sf_preproc_example/sf_dynamic_preproc_lib.c
    src/dynamic-plugins/sf_preproc_example/sf_dynamic_preproc_lib.h
    src/dynamic-plugins/sf_convert_dynamic.c
    src/dynamic-plugins/sf_convert_dynamic.h
    src/dynamic-plugins/sf_dynamic_common.h
    src/dynamic-plugins/sf_dynamic_define.h
    src/dynamic-plugins/sf_dynamic_detection.h
    src/dynamic-plugins/sf_dynamic_engine.h
    src/dynamic-plugins/sf_dynamic_meta.h
    src/dynamic-plugins/sf_dynamic_plugins.c
    src/dynamic-plugins/sf_dynamic_preprocessor.h
    src/dynamic-plugins/sf_dynamic_side_channel.h
    src/dynamic-plugins/sp_dynamic.c
    src/dynamic-plugins/sp_dynamic.h
    src/dynamic-plugins/sp_preprocopt.c
    src/dynamic-plugins/sp_preprocopt.h
    src/dynamic-preprocessors/appid/client_plugins/client_app_aim.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_aim.h
    src/dynamic-preprocessors/appid/client_plugins/client_app_api.h
    src/dynamic-preprocessors/appid/client_plugins/client_app_base.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_base.h
    src/dynamic-preprocessors/appid/client_plugins/client_app_bit.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_bit_tracker.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_msn.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_msn.h
    src/dynamic-preprocessors/appid/client_plugins/client_app_rtp.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_smtp.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_smtp.h
    src/dynamic-preprocessors/appid/client_plugins/client_app_ssh.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_timbuktu.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_tns.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_vnc.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_ym.c
    src/dynamic-preprocessors/appid/client_plugins/client_app_ym.h
    src/dynamic-preprocessors/appid/client_plugins/clientAppConfig.h
    src/dynamic-preprocessors/appid/detector_plugins/detector_api.h
    src/dynamic-preprocessors/appid/detector_plugins/detector_base.c
    src/dynamic-preprocessors/appid/detector_plugins/detector_base.h
    src/dynamic-preprocessors/appid/detector_plugins/detector_dns.c
    src/dynamic-preprocessors/appid/detector_plugins/detector_dns.h
    src/dynamic-preprocessors/appid/detector_plugins/detector_http.c
    src/dynamic-preprocessors/appid/detector_plugins/detector_http.h
    src/dynamic-preprocessors/appid/detector_plugins/detector_imap.c
    src/dynamic-preprocessors/appid/detector_plugins/detector_kerberos.c
    src/dynamic-preprocessors/appid/detector_plugins/detector_pattern.c
    src/dynamic-preprocessors/appid/detector_plugins/detector_pattern.h
    src/dynamic-preprocessors/appid/detector_plugins/detector_pop3.c
    src/dynamic-preprocessors/appid/detector_plugins/detector_sip.c
    src/dynamic-preprocessors/appid/detector_plugins/detector_sip.h
    src/dynamic-preprocessors/appid/detector_plugins/http_url_patterns.c
    src/dynamic-preprocessors/appid/detector_plugins/http_url_patterns.h
    src/dynamic-preprocessors/appid/service_plugins/dcerpc.c
    src/dynamic-preprocessors/appid/service_plugins/dcerpc.h
    src/dynamic-preprocessors/appid/service_plugins/service_api.h
    src/dynamic-preprocessors/appid/service_plugins/service_base.c
    src/dynamic-preprocessors/appid/service_plugins/service_base.h
    src/dynamic-preprocessors/appid/service_plugins/service_battle_field.c
    src/dynamic-preprocessors/appid/service_plugins/service_battle_field.h
    src/dynamic-preprocessors/appid/service_plugins/service_bgp.c
    src/dynamic-preprocessors/appid/service_plugins/service_bgp.h
    src/dynamic-preprocessors/appid/service_plugins/service_bit.c
    src/dynamic-preprocessors/appid/service_plugins/service_bootp.c
    src/dynamic-preprocessors/appid/service_plugins/service_bootp.h
    src/dynamic-preprocessors/appid/service_plugins/service_dcerpc.c
    src/dynamic-preprocessors/appid/service_plugins/service_dcerpc.h
    src/dynamic-preprocessors/appid/service_plugins/service_direct_connect.c
    src/dynamic-preprocessors/appid/service_plugins/service_direct_connect.h
    src/dynamic-preprocessors/appid/service_plugins/service_flap.c
    src/dynamic-preprocessors/appid/service_plugins/service_flap.h
    src/dynamic-preprocessors/appid/service_plugins/service_ftp.c
    src/dynamic-preprocessors/appid/service_plugins/service_ftp.h
    src/dynamic-preprocessors/appid/service_plugins/service_irc.c
    src/dynamic-preprocessors/appid/service_plugins/service_irc.h
    src/dynamic-preprocessors/appid/service_plugins/service_lpr.c
    src/dynamic-preprocessors/appid/service_plugins/service_lpr.h
    src/dynamic-preprocessors/appid/service_plugins/service_MDNS.c
    src/dynamic-preprocessors/appid/service_plugins/service_MDNS.h
    src/dynamic-preprocessors/appid/service_plugins/service_mysql.c
    src/dynamic-preprocessors/appid/service_plugins/service_mysql.h
    src/dynamic-preprocessors/appid/service_plugins/service_netbios.c
    src/dynamic-preprocessors/appid/service_plugins/service_netbios.h
    src/dynamic-preprocessors/appid/service_plugins/service_nntp.c
    src/dynamic-preprocessors/appid/service_plugins/service_nntp.h
    src/dynamic-preprocessors/appid/service_plugins/service_ntp.c
    src/dynamic-preprocessors/appid/service_plugins/service_ntp.h
    src/dynamic-preprocessors/appid/service_plugins/service_radius.c
    src/dynamic-preprocessors/appid/service_plugins/service_radius.h
    src/dynamic-preprocessors/appid/service_plugins/service_rexec.c
    src/dynamic-preprocessors/appid/service_plugins/service_rexec.h
    src/dynamic-preprocessors/appid/service_plugins/service_rfb.c
    src/dynamic-preprocessors/appid/service_plugins/service_rfb.h
    src/dynamic-preprocessors/appid/service_plugins/service_rlogin.c
    src/dynamic-preprocessors/appid/service_plugins/service_rlogin.h
    src/dynamic-preprocessors/appid/service_plugins/service_rpc.c
    src/dynamic-preprocessors/appid/service_plugins/service_rpc.h
    src/dynamic-preprocessors/appid/service_plugins/service_rshell.c
    src/dynamic-preprocessors/appid/service_plugins/service_rshell.h
    src/dynamic-preprocessors/appid/service_plugins/service_rsync.c
    src/dynamic-preprocessors/appid/service_plugins/service_rsync.h
    src/dynamic-preprocessors/appid/service_plugins/service_rtmp.c
    src/dynamic-preprocessors/appid/service_plugins/service_rtmp.h
    src/dynamic-preprocessors/appid/service_plugins/service_smtp.c
    src/dynamic-preprocessors/appid/service_plugins/service_smtp.h
    src/dynamic-preprocessors/appid/service_plugins/service_snmp.c
    src/dynamic-preprocessors/appid/service_plugins/service_snmp.h
    src/dynamic-preprocessors/appid/service_plugins/service_ssh.c
    src/dynamic-preprocessors/appid/service_plugins/service_ssh.h
    src/dynamic-preprocessors/appid/service_plugins/service_ssl.c
    src/dynamic-preprocessors/appid/service_plugins/service_ssl.h
    src/dynamic-preprocessors/appid/service_plugins/service_telnet.c
    src/dynamic-preprocessors/appid/service_plugins/service_telnet.h
    src/dynamic-preprocessors/appid/service_plugins/service_tftp.c
    src/dynamic-preprocessors/appid/service_plugins/service_tftp.h
    src/dynamic-preprocessors/appid/service_plugins/service_timbuktu.c
    src/dynamic-preprocessors/appid/service_plugins/service_tns.c
    src/dynamic-preprocessors/appid/service_plugins/service_util.h
    src/dynamic-preprocessors/appid/service_plugins/serviceConfig.h
    src/dynamic-preprocessors/appid/util/common_util.c
    src/dynamic-preprocessors/appid/util/common_util.h
    src/dynamic-preprocessors/appid/util/fw_avltree.c
    src/dynamic-preprocessors/appid/util/fw_avltree.h
    src/dynamic-preprocessors/appid/util/ip_funcs.c
    src/dynamic-preprocessors/appid/util/ip_funcs.h
    src/dynamic-preprocessors/appid/util/NetworkSet.c
    src/dynamic-preprocessors/appid/util/NetworkSet.h
    src/dynamic-preprocessors/appid/util/OutputFile.c
    src/dynamic-preprocessors/appid/util/OutputFile.h
    src/dynamic-preprocessors/appid/util/sf_mlmp.c
    src/dynamic-preprocessors/appid/util/sf_mlmp.h
    src/dynamic-preprocessors/appid/util/sf_multi_mpse.c
    src/dynamic-preprocessors/appid/util/sf_multi_mpse.h
    src/dynamic-preprocessors/appid/util/sfutil.c
    src/dynamic-preprocessors/appid/util/sfutil.h
    src/dynamic-preprocessors/appid/app_forecast.c
    src/dynamic-preprocessors/appid/app_forecast.h
    src/dynamic-preprocessors/appid/appId.c
    src/dynamic-preprocessors/appid/appId.h
    src/dynamic-preprocessors/appid/appIdApi.c
    src/dynamic-preprocessors/appid/appIdConfig.c
    src/dynamic-preprocessors/appid/appIdConfig.h
    src/dynamic-preprocessors/appid/appIdStats.c
    src/dynamic-preprocessors/appid/appIdStats.h
    src/dynamic-preprocessors/appid/appInfoTable.c
    src/dynamic-preprocessors/appid/appInfoTable.h
    src/dynamic-preprocessors/appid/attribute.h
    src/dynamic-preprocessors/appid/commonAppMatcher.c
    src/dynamic-preprocessors/appid/commonAppMatcher.h
    src/dynamic-preprocessors/appid/dns_defs.h
    src/dynamic-preprocessors/appid/flow.c
    src/dynamic-preprocessors/appid/flow.h
    src/dynamic-preprocessors/appid/flow_error.h
    src/dynamic-preprocessors/appid/fw_appid.c
    src/dynamic-preprocessors/appid/fw_appid.h
    src/dynamic-preprocessors/appid/hostPortAppCache.c
    src/dynamic-preprocessors/appid/hostPortAppCache.h
    src/dynamic-preprocessors/appid/httpCommon.h
    src/dynamic-preprocessors/appid/lengthAppCache.c
    src/dynamic-preprocessors/appid/lengthAppCache.h
    src/dynamic-preprocessors/appid/luaDetectorApi.c
    src/dynamic-preprocessors/appid/luaDetectorApi.h
    src/dynamic-preprocessors/appid/luaDetectorFlowApi.c
    src/dynamic-preprocessors/appid/luaDetectorFlowApi.h
    src/dynamic-preprocessors/appid/luaDetectorModule.c
    src/dynamic-preprocessors/appid/luaDetectorModule.h
    src/dynamic-preprocessors/appid/service_state.c
    src/dynamic-preprocessors/appid/service_state.h
    src/dynamic-preprocessors/appid/spp_appid.c
    src/dynamic-preprocessors/appid/spp_appid.h
    src/dynamic-preprocessors/appid/thirdparty_appid_api.h
    src/dynamic-preprocessors/appid/thirdparty_appid_types.h
    src/dynamic-preprocessors/appid/thirdparty_appid_utils.c
    src/dynamic-preprocessors/appid/thirdparty_appid_utils.h
    src/dynamic-preprocessors/dcerpc2/includes/dcerpc.h
    src/dynamic-preprocessors/dcerpc2/includes/smb.h
    src/dynamic-preprocessors/dcerpc2/dce2_cl.c
    src/dynamic-preprocessors/dcerpc2/dce2_cl.h
    src/dynamic-preprocessors/dcerpc2/dce2_co.c
    src/dynamic-preprocessors/dcerpc2/dce2_co.h
    src/dynamic-preprocessors/dcerpc2/dce2_config.c
    src/dynamic-preprocessors/dcerpc2/dce2_config.h
    src/dynamic-preprocessors/dcerpc2/dce2_debug.c
    src/dynamic-preprocessors/dcerpc2/dce2_debug.h
    src/dynamic-preprocessors/dcerpc2/dce2_event.c
    src/dynamic-preprocessors/dcerpc2/dce2_event.h
    src/dynamic-preprocessors/dcerpc2/dce2_http.c
    src/dynamic-preprocessors/dcerpc2/dce2_http.h
    src/dynamic-preprocessors/dcerpc2/dce2_list.c
    src/dynamic-preprocessors/dcerpc2/dce2_list.h
    src/dynamic-preprocessors/dcerpc2/dce2_memory.c
    src/dynamic-preprocessors/dcerpc2/dce2_memory.h
    src/dynamic-preprocessors/dcerpc2/dce2_paf.c
    src/dynamic-preprocessors/dcerpc2/dce2_paf.h
    src/dynamic-preprocessors/dcerpc2/dce2_roptions.c
    src/dynamic-preprocessors/dcerpc2/dce2_roptions.h
    src/dynamic-preprocessors/dcerpc2/dce2_session.h
    src/dynamic-preprocessors/dcerpc2/dce2_smb.c
    src/dynamic-preprocessors/dcerpc2/dce2_smb.h
    src/dynamic-preprocessors/dcerpc2/dce2_smb2.c
    src/dynamic-preprocessors/dcerpc2/dce2_smb2.h
    src/dynamic-preprocessors/dcerpc2/dce2_stats.c
    src/dynamic-preprocessors/dcerpc2/dce2_stats.h
    src/dynamic-preprocessors/dcerpc2/dce2_tcp.c
    src/dynamic-preprocessors/dcerpc2/dce2_tcp.h
    src/dynamic-preprocessors/dcerpc2/dce2_udp.c
    src/dynamic-preprocessors/dcerpc2/dce2_udp.h
    src/dynamic-preprocessors/dcerpc2/dce2_utils.c
    src/dynamic-preprocessors/dcerpc2/dce2_utils.h
    src/dynamic-preprocessors/dcerpc2/snort_dce2.c
    src/dynamic-preprocessors/dcerpc2/snort_dce2.h
    src/dynamic-preprocessors/dcerpc2/spp_dce2.c
    src/dynamic-preprocessors/dcerpc2/spp_dce2.h
    src/dynamic-preprocessors/dnp3/dnp3_map.c
    src/dynamic-preprocessors/dnp3/dnp3_map.h
    src/dynamic-preprocessors/dnp3/dnp3_paf.c
    src/dynamic-preprocessors/dnp3/dnp3_paf.h
    src/dynamic-preprocessors/dnp3/dnp3_reassembly.c
    src/dynamic-preprocessors/dnp3/dnp3_reassembly.h
    src/dynamic-preprocessors/dnp3/dnp3_roptions.c
    src/dynamic-preprocessors/dnp3/dnp3_roptions.h
    src/dynamic-preprocessors/dnp3/spp_dnp3.c
    src/dynamic-preprocessors/dnp3/spp_dnp3.h
    src/dynamic-preprocessors/dns/spp_dns.c
    src/dynamic-preprocessors/dns/spp_dns.h
    src/dynamic-preprocessors/file/include/circular_buffer.c
    src/dynamic-preprocessors/file/include/output_lib.c
    src/dynamic-preprocessors/file/file_agent.c
    src/dynamic-preprocessors/file/file_agent.h
    src/dynamic-preprocessors/file/file_event_log.c
    src/dynamic-preprocessors/file/file_event_log.h
    src/dynamic-preprocessors/file/file_inspect_config.c
    src/dynamic-preprocessors/file/file_inspect_config.h
    src/dynamic-preprocessors/file/file_sha.c
    src/dynamic-preprocessors/file/file_sha.h
    src/dynamic-preprocessors/file/spp_file.c
    src/dynamic-preprocessors/file/spp_file.h
    src/dynamic-preprocessors/ftptelnet/ftp_bounce_lookup.c
    src/dynamic-preprocessors/ftptelnet/ftp_bounce_lookup.h
    src/dynamic-preprocessors/ftptelnet/ftp_client.h
    src/dynamic-preprocessors/ftptelnet/ftp_cmd_lookup.c
    src/dynamic-preprocessors/ftptelnet/ftp_cmd_lookup.h
    src/dynamic-preprocessors/ftptelnet/ftp_server.h
    src/dynamic-preprocessors/ftptelnet/ftpp_eo.h
    src/dynamic-preprocessors/ftptelnet/ftpp_eo_events.h
    src/dynamic-preprocessors/ftptelnet/ftpp_eo_log.c
    src/dynamic-preprocessors/ftptelnet/ftpp_eo_log.h
    src/dynamic-preprocessors/ftptelnet/ftpp_include.h
    src/dynamic-preprocessors/ftptelnet/ftpp_return_codes.h
    src/dynamic-preprocessors/ftptelnet/ftpp_si.c
    src/dynamic-preprocessors/ftptelnet/ftpp_si.h
    src/dynamic-preprocessors/ftptelnet/ftpp_ui_client_lookup.c
    src/dynamic-preprocessors/ftptelnet/ftpp_ui_client_lookup.h
    src/dynamic-preprocessors/ftptelnet/ftpp_ui_config.c
    src/dynamic-preprocessors/ftptelnet/ftpp_ui_config.h
    src/dynamic-preprocessors/ftptelnet/ftpp_ui_server_lookup.c
    src/dynamic-preprocessors/ftptelnet/ftpp_ui_server_lookup.h
    src/dynamic-preprocessors/ftptelnet/hi_util_kmap.c
    src/dynamic-preprocessors/ftptelnet/hi_util_kmap.h
    src/dynamic-preprocessors/ftptelnet/hi_util_xmalloc.c
    src/dynamic-preprocessors/ftptelnet/hi_util_xmalloc.h
    src/dynamic-preprocessors/ftptelnet/pp_ftp.c
    src/dynamic-preprocessors/ftptelnet/pp_ftp.h
    src/dynamic-preprocessors/ftptelnet/pp_telnet.c
    src/dynamic-preprocessors/ftptelnet/pp_telnet.h
    src/dynamic-preprocessors/ftptelnet/snort_ftptelnet.c
    src/dynamic-preprocessors/ftptelnet/snort_ftptelnet.h
    src/dynamic-preprocessors/ftptelnet/spp_ftptelnet.c
    src/dynamic-preprocessors/ftptelnet/spp_ftptelnet.h
    src/dynamic-preprocessors/gtp/gtp_config.c
    src/dynamic-preprocessors/gtp/gtp_config.h
    src/dynamic-preprocessors/gtp/gtp_debug.h
    src/dynamic-preprocessors/gtp/gtp_parser.c
    src/dynamic-preprocessors/gtp/gtp_parser.h
    src/dynamic-preprocessors/gtp/gtp_roptions.c
    src/dynamic-preprocessors/gtp/gtp_roptions.h
    src/dynamic-preprocessors/gtp/spp_gtp.c
    src/dynamic-preprocessors/gtp/spp_gtp.h
    src/dynamic-preprocessors/imap/imap_config.c
    src/dynamic-preprocessors/imap/imap_config.h
    src/dynamic-preprocessors/imap/imap_log.c
    src/dynamic-preprocessors/imap/imap_log.h
    src/dynamic-preprocessors/imap/imap_paf.c
    src/dynamic-preprocessors/imap/imap_paf.h
    src/dynamic-preprocessors/imap/imap_util.c
    src/dynamic-preprocessors/imap/imap_util.h
    src/dynamic-preprocessors/imap/snort_imap.c
    src/dynamic-preprocessors/imap/snort_imap.h
    src/dynamic-preprocessors/imap/spp_imap.c
    src/dynamic-preprocessors/imap/spp_imap.h
    src/dynamic-preprocessors/include/bitop.h
    src/dynamic-preprocessors/include/cpuclock.h
    src/dynamic-preprocessors/include/event.h
    src/dynamic-preprocessors/include/file_api.h
    src/dynamic-preprocessors/include/file_mail_common.h
    src/dynamic-preprocessors/include/idle_processing.h
    src/dynamic-preprocessors/include/ipv6_port.h
    src/dynamic-preprocessors/include/mempool.c
    src/dynamic-preprocessors/include/mempool.h
    src/dynamic-preprocessors/include/mpse_methods.h
    src/dynamic-preprocessors/include/obfuscation.h
    src/dynamic-preprocessors/include/packet_time.h
    src/dynamic-preprocessors/include/pcap_pkthdr32.h
    src/dynamic-preprocessors/include/perf_indicators.h
    src/dynamic-preprocessors/include/plugin_enum.h
    src/dynamic-preprocessors/include/preprocids.h
    src/dynamic-preprocessors/include/profiler.h
    src/dynamic-preprocessors/include/rule_option_types.h
    src/dynamic-preprocessors/include/segment_mem.c
    src/dynamic-preprocessors/include/segment_mem.h
    src/dynamic-preprocessors/include/session_api.h
    src/dynamic-preprocessors/include/sf_base64decode.c
    src/dynamic-preprocessors/include/sf_base64decode.h
    src/dynamic-preprocessors/include/sf_decompression.h
    src/dynamic-preprocessors/include/sf_dynamic_common.h
    src/dynamic-preprocessors/include/sf_dynamic_define.h
    src/dynamic-preprocessors/include/sf_dynamic_engine.h
    src/dynamic-preprocessors/include/sf_dynamic_meta.h
    src/dynamic-preprocessors/include/sf_dynamic_preproc_lib.c
    src/dynamic-preprocessors/include/sf_dynamic_preproc_lib.h
    src/dynamic-preprocessors/include/sf_dynamic_preprocessor.h
    src/dynamic-preprocessors/include/sf_email_attach_decode.c
    src/dynamic-preprocessors/include/sf_email_attach_decode.h
    src/dynamic-preprocessors/include/sf_ip.c
    src/dynamic-preprocessors/include/sf_ip.h
    src/dynamic-preprocessors/include/sf_ipvar.h
    src/dynamic-preprocessors/include/sf_protocols.h
    src/dynamic-preprocessors/include/sf_sdlist.c
    src/dynamic-preprocessors/include/sf_sdlist.h
    src/dynamic-preprocessors/include/sf_sdlist_types.h
    src/dynamic-preprocessors/include/sf_seqnums.h
    src/dynamic-preprocessors/include/sf_snort_packet.h
    src/dynamic-preprocessors/include/sf_snort_plugin_api.h
    src/dynamic-preprocessors/include/sf_types.h
    src/dynamic-preprocessors/include/sf_vartable.h
    src/dynamic-preprocessors/include/sfcontrol.h
    src/dynamic-preprocessors/include/sfdebug.h
    src/dynamic-preprocessors/include/sfghash.h
    src/dynamic-preprocessors/include/sfhashfcn.h
    src/dynamic-preprocessors/include/sfPolicy.h
    src/dynamic-preprocessors/include/sfPolicyUserData.c
    src/dynamic-preprocessors/include/sfPolicyUserData.h
    src/dynamic-preprocessors/include/sfrt.c
    src/dynamic-preprocessors/include/sfrt.h
    src/dynamic-preprocessors/include/sfrt_dir.c
    src/dynamic-preprocessors/include/sfrt_dir.h
    src/dynamic-preprocessors/include/sfrt_flat.c
    src/dynamic-preprocessors/include/sfrt_flat.h
    src/dynamic-preprocessors/include/sfrt_flat_dir.c
    src/dynamic-preprocessors/include/sfrt_flat_dir.h
    src/dynamic-preprocessors/include/sfrt_trie.h
    src/dynamic-preprocessors/include/sfsnort_dynamic_detection_lib.c
    src/dynamic-preprocessors/include/sfsnort_dynamic_detection_lib.h
    src/dynamic-preprocessors/include/sidechannel_define.h
    src/dynamic-preprocessors/include/signature.h
    src/dynamic-preprocessors/include/sip_common.h
    src/dynamic-preprocessors/include/snort_bounds.h
    src/dynamic-preprocessors/include/snort_debug.h
    src/dynamic-preprocessors/include/str_search.h
    src/dynamic-preprocessors/include/stream_api.h
    src/dynamic-preprocessors/include/treenodes.h
    src/dynamic-preprocessors/include/Unified2_common.h
    src/dynamic-preprocessors/include/util_unfold.c
    src/dynamic-preprocessors/include/util_unfold.h
    src/dynamic-preprocessors/libs/sf_preproc_info.h
    src/dynamic-preprocessors/libs/sfcommon.h
    src/dynamic-preprocessors/libs/sfparser.c
    src/dynamic-preprocessors/modbus/modbus_decode.c
    src/dynamic-preprocessors/modbus/modbus_decode.h
    src/dynamic-preprocessors/modbus/modbus_paf.c
    src/dynamic-preprocessors/modbus/modbus_paf.h
    src/dynamic-preprocessors/modbus/modbus_roptions.c
    src/dynamic-preprocessors/modbus/modbus_roptions.h
    src/dynamic-preprocessors/modbus/spp_modbus.c
    src/dynamic-preprocessors/modbus/spp_modbus.h
    src/dynamic-preprocessors/pop/pop_config.c
    src/dynamic-preprocessors/pop/pop_config.h
    src/dynamic-preprocessors/pop/pop_log.c
    src/dynamic-preprocessors/pop/pop_log.h
    src/dynamic-preprocessors/pop/pop_paf.c
    src/dynamic-preprocessors/pop/pop_paf.h
    src/dynamic-preprocessors/pop/pop_util.c
    src/dynamic-preprocessors/pop/pop_util.h
    src/dynamic-preprocessors/pop/snort_pop.c
    src/dynamic-preprocessors/pop/snort_pop.h
    src/dynamic-preprocessors/pop/spp_pop.c
    src/dynamic-preprocessors/pop/spp_pop.h
    src/dynamic-preprocessors/reputation/shmem/sflinux_helpers.c
    src/dynamic-preprocessors/reputation/shmem/sflinux_helpers.h
    src/dynamic-preprocessors/reputation/shmem/shmem_common.h
    src/dynamic-preprocessors/reputation/shmem/shmem_config.c
    src/dynamic-preprocessors/reputation/shmem/shmem_config.h
    src/dynamic-preprocessors/reputation/shmem/shmem_datamgmt.c
    src/dynamic-preprocessors/reputation/shmem/shmem_datamgmt.h
    src/dynamic-preprocessors/reputation/shmem/shmem_lib.c
    src/dynamic-preprocessors/reputation/shmem/shmem_lib.h
    src/dynamic-preprocessors/reputation/shmem/shmem_mgmt.c
    src/dynamic-preprocessors/reputation/shmem/shmem_mgmt.h
    src/dynamic-preprocessors/reputation/reputation_config.c
    src/dynamic-preprocessors/reputation/reputation_config.h
    src/dynamic-preprocessors/reputation/reputation_debug.h
    src/dynamic-preprocessors/reputation/reputation_utils.c
    src/dynamic-preprocessors/reputation/reputation_utils.h
    src/dynamic-preprocessors/reputation/spp_reputation.c
    src/dynamic-preprocessors/reputation/spp_reputation.h
    src/dynamic-preprocessors/sdf/sdf_credit_card.c
    src/dynamic-preprocessors/sdf/sdf_credit_card.h
    src/dynamic-preprocessors/sdf/sdf_detection_option.c
    src/dynamic-preprocessors/sdf/sdf_detection_option.h
    src/dynamic-preprocessors/sdf/sdf_pattern_match.c
    src/dynamic-preprocessors/sdf/sdf_pattern_match.h
    src/dynamic-preprocessors/sdf/sdf_us_ssn.c
    src/dynamic-preprocessors/sdf/sdf_us_ssn.h
    src/dynamic-preprocessors/sdf/spp_sdf.c
    src/dynamic-preprocessors/sdf/spp_sdf.h
    src/dynamic-preprocessors/sip/sip_config.c
    src/dynamic-preprocessors/sip/sip_config.h
    src/dynamic-preprocessors/sip/sip_debug.h
    src/dynamic-preprocessors/sip/sip_dialog.c
    src/dynamic-preprocessors/sip/sip_dialog.h
    src/dynamic-preprocessors/sip/sip_paf.c
    src/dynamic-preprocessors/sip/sip_paf.h
    src/dynamic-preprocessors/sip/sip_parser.c
    src/dynamic-preprocessors/sip/sip_parser.h
    src/dynamic-preprocessors/sip/sip_roptions.c
    src/dynamic-preprocessors/sip/sip_roptions.h
    src/dynamic-preprocessors/sip/sip_utils.c
    src/dynamic-preprocessors/sip/sip_utils.h
    src/dynamic-preprocessors/sip/spp_sip.c
    src/dynamic-preprocessors/sip/spp_sip.h
    src/dynamic-preprocessors/smtp/smtp_config.c
    src/dynamic-preprocessors/smtp/smtp_config.h
    src/dynamic-preprocessors/smtp/smtp_log.c
    src/dynamic-preprocessors/smtp/smtp_log.h
    src/dynamic-preprocessors/smtp/smtp_normalize.c
    src/dynamic-preprocessors/smtp/smtp_normalize.h
    src/dynamic-preprocessors/smtp/smtp_paf.c
    src/dynamic-preprocessors/smtp/smtp_paf.h
    src/dynamic-preprocessors/smtp/smtp_util.c
    src/dynamic-preprocessors/smtp/smtp_util.h
    src/dynamic-preprocessors/smtp/smtp_xlink2state.c
    src/dynamic-preprocessors/smtp/smtp_xlink2state.h
    src/dynamic-preprocessors/smtp/snort_smtp.c
    src/dynamic-preprocessors/smtp/snort_smtp.h
    src/dynamic-preprocessors/smtp/spp_smtp.c
    src/dynamic-preprocessors/smtp/spp_smtp.h
    src/dynamic-preprocessors/ssh/spp_ssh.c
    src/dynamic-preprocessors/ssh/spp_ssh.h
    src/dynamic-preprocessors/ssl/ssl_setup.c
    src/dynamic-preprocessors/ssl/ssl_setup.h
    src/dynamic-preprocessors/ssl_common/ssl.c
    src/dynamic-preprocessors/ssl_common/ssl.h
    src/dynamic-preprocessors/ssl_common/ssl_config.c
    src/dynamic-preprocessors/ssl_common/ssl_config.h
    src/dynamic-preprocessors/ssl_common/ssl_ha.c
    src/dynamic-preprocessors/ssl_common/ssl_ha.h
    src/dynamic-preprocessors/ssl_common/ssl_include.h
    src/dynamic-preprocessors/ssl_common/ssl_inspect.c
    src/dynamic-preprocessors/ssl_common/ssl_inspect.h
    src/dynamic-preprocessors/ssl_common/ssl_session.h
    src/file-process/libs/file_config.c
    src/file-process/libs/file_config.h
    src/file-process/libs/file_identifier.c
    src/file-process/libs/file_identifier.h
    src/file-process/libs/file_lib.c
    src/file-process/libs/file_lib.h
    src/file-process/circular_buffer.c
    src/file-process/circular_buffer.h
    src/file-process/file_api.h
    src/file-process/file_capture.c
    src/file-process/file_capture.h
    src/file-process/file_mail_common.h
    src/file-process/file_mempool.c
    src/file-process/file_mempool.h
    src/file-process/file_mime_config.c
    src/file-process/file_mime_config.h
    src/file-process/file_mime_process.c
    src/file-process/file_mime_process.h
    src/file-process/file_resume_block.c
    src/file-process/file_resume_block.h
    src/file-process/file_segment_process.c
    src/file-process/file_segment_process.h
    src/file-process/file_service.c
    src/file-process/file_service.h
    src/file-process/file_service_config.c
    src/file-process/file_service_config.h
    src/file-process/file_stats.c
    src/file-process/file_stats.h
    src/output-plugins/spo_alert_fast.c
    src/output-plugins/spo_alert_fast.h
    src/output-plugins/spo_alert_full.c
    src/output-plugins/spo_alert_full.h
    src/output-plugins/spo_alert_sf_socket.c
    src/output-plugins/spo_alert_sf_socket.h
    src/output-plugins/spo_alert_syslog.c
    src/output-plugins/spo_alert_syslog.h
    src/output-plugins/spo_alert_test.c
    src/output-plugins/spo_alert_test.h
    src/output-plugins/spo_alert_unixsock.c
    src/output-plugins/spo_alert_unixsock.h
    src/output-plugins/spo_csv.c
    src/output-plugins/spo_csv.h
    src/output-plugins/spo_log_ascii.c
    src/output-plugins/spo_log_ascii.h
    src/output-plugins/spo_log_null.c
    src/output-plugins/spo_log_null.h
    src/output-plugins/spo_log_tcpdump.c
    src/output-plugins/spo_log_tcpdump.h
    src/output-plugins/spo_unified2.c
    src/output-plugins/spo_unified2.h
    src/parser/IpAddrSet.c
    src/parser/IpAddrSet.h
    src/preprocessors/HttpInspect/anomaly_detection/hi_ad.c
    src/preprocessors/HttpInspect/client/hi_client.c
    src/preprocessors/HttpInspect/client/hi_client_norm.c
    src/preprocessors/HttpInspect/event_output/hi_eo_log.c
    src/preprocessors/HttpInspect/files/file_decomp.c
    src/preprocessors/HttpInspect/files/file_decomp_PDF.c
    src/preprocessors/HttpInspect/files/file_decomp_SWF.c
    src/preprocessors/HttpInspect/include/file_decomp.h
    src/preprocessors/HttpInspect/include/file_decomp_PDF.h
    src/preprocessors/HttpInspect/include/file_decomp_SWF.h
    src/preprocessors/HttpInspect/include/hi_ad.h
    src/preprocessors/HttpInspect/include/hi_client.h
    src/preprocessors/HttpInspect/include/hi_client_norm.h
    src/preprocessors/HttpInspect/include/hi_client_stateful.h
    src/preprocessors/HttpInspect/include/hi_cmd_lookup.h
    src/preprocessors/HttpInspect/include/hi_eo.h
    src/preprocessors/HttpInspect/include/hi_eo_events.h
    src/preprocessors/HttpInspect/include/hi_eo_log.h
    src/preprocessors/HttpInspect/include/hi_include.h
    src/preprocessors/HttpInspect/include/hi_mi.h
    src/preprocessors/HttpInspect/include/hi_norm.h
    src/preprocessors/HttpInspect/include/hi_paf.h
    src/preprocessors/HttpInspect/include/hi_reqmethod_check.h
    src/preprocessors/HttpInspect/include/hi_return_codes.h
    src/preprocessors/HttpInspect/include/hi_server.h
    src/preprocessors/HttpInspect/include/hi_server_norm.h
    src/preprocessors/HttpInspect/include/hi_si.h
    src/preprocessors/HttpInspect/include/hi_stateful_inspect.h
    src/preprocessors/HttpInspect/include/hi_ui_config.h
    src/preprocessors/HttpInspect/include/hi_ui_iis_unicode_map.h
    src/preprocessors/HttpInspect/include/hi_ui_server_lookup.h
    src/preprocessors/HttpInspect/include/hi_uri.h
    src/preprocessors/HttpInspect/include/hi_util.h
    src/preprocessors/HttpInspect/include/hi_util_hbm.h
    src/preprocessors/HttpInspect/include/hi_util_kmap.h
    src/preprocessors/HttpInspect/include/hi_util_xmalloc.h
    src/preprocessors/HttpInspect/mode_inspection/hi_mi.c
    src/preprocessors/HttpInspect/normalization/hi_norm.c
    src/preprocessors/HttpInspect/server/hi_server.c
    src/preprocessors/HttpInspect/server/hi_server_norm.c
    src/preprocessors/HttpInspect/session_inspection/hi_si.c
    src/preprocessors/HttpInspect/user_interface/hi_ui_config.c
    src/preprocessors/HttpInspect/user_interface/hi_ui_iis_unicode_map.c
    src/preprocessors/HttpInspect/user_interface/hi_ui_server_lookup.c
    src/preprocessors/HttpInspect/utils/hi_cmd_lookup.c
    src/preprocessors/HttpInspect/utils/hi_paf.c
    src/preprocessors/HttpInspect/utils/hi_util_hbm.c
    src/preprocessors/HttpInspect/utils/hi_util_kmap.c
    src/preprocessors/HttpInspect/utils/hi_util_xmalloc.c
    src/preprocessors/Session/session_common.c
    src/preprocessors/Session/session_common.h
    src/preprocessors/Session/session_expect.c
    src/preprocessors/Session/session_expect.h
    src/preprocessors/Session/snort_session.c
    src/preprocessors/Session/snort_session.h
    src/preprocessors/Session/stream5_ha.c
    src/preprocessors/Session/stream5_ha.h
    src/preprocessors/Stream6/snort_stream_icmp.c
    src/preprocessors/Stream6/snort_stream_icmp.h
    src/preprocessors/Stream6/snort_stream_ip.c
    src/preprocessors/Stream6/snort_stream_ip.h
    src/preprocessors/Stream6/snort_stream_tcp.c
    src/preprocessors/Stream6/snort_stream_tcp.h
    src/preprocessors/Stream6/snort_stream_udp.c
    src/preprocessors/Stream6/snort_stream_udp.h
    src/preprocessors/Stream6/stream_common.c
    src/preprocessors/Stream6/stream_common.h
    src/preprocessors/Stream6/stream_paf.c
    src/preprocessors/Stream6/stream_paf.h
    src/preprocessors/normalize.c
    src/preprocessors/normalize.h
    src/preprocessors/perf-base.c
    src/preprocessors/perf-base.h
    src/preprocessors/perf-event.c
    src/preprocessors/perf-event.h
    src/preprocessors/perf-flow.c
    src/preprocessors/perf-flow.h
    src/preprocessors/perf.c
    src/preprocessors/perf.h
    src/preprocessors/perf_indicators.c
    src/preprocessors/perf_indicators.h
    src/preprocessors/portscan.c
    src/preprocessors/portscan.h
    src/preprocessors/session_api.c
    src/preprocessors/session_api.h
    src/preprocessors/sfprocpidstats.c
    src/preprocessors/sfprocpidstats.h
    src/preprocessors/sip_common.h
    src/preprocessors/snort_httpinspect.c
    src/preprocessors/snort_httpinspect.h
    src/preprocessors/spp_arpspoof.c
    src/preprocessors/spp_arpspoof.h
    src/preprocessors/spp_bo.c
    src/preprocessors/spp_bo.h
    src/preprocessors/spp_frag3.c
    src/preprocessors/spp_frag3.h
    src/preprocessors/spp_httpinspect.c
    src/preprocessors/spp_httpinspect.h
    src/preprocessors/spp_normalize.c
    src/preprocessors/spp_normalize.h
    src/preprocessors/spp_perfmonitor.c
    src/preprocessors/spp_perfmonitor.h
    src/preprocessors/spp_rpc_decode.c
    src/preprocessors/spp_rpc_decode.h
    src/preprocessors/spp_session.c
    src/preprocessors/spp_session.h
    src/preprocessors/spp_sfportscan.c
    src/preprocessors/spp_sfportscan.h
    src/preprocessors/spp_stream6.c
    src/preprocessors/spp_stream6.h
    src/preprocessors/str_search.c
    src/preprocessors/str_search.h
    src/preprocessors/stream_api.c
    src/preprocessors/stream_api.h
    src/sfutil/acsmx.c
    src/sfutil/acsmx.h
    src/sfutil/acsmx2.c
    src/sfutil/acsmx2.h
    src/sfutil/asn1.c
    src/sfutil/asn1.h
    src/sfutil/bitop.h
    src/sfutil/bitop_funcs.h
    src/sfutil/bnfa_search.c
    src/sfutil/bnfa_search.h
    src/sfutil/getopt.h
    src/sfutil/getopt1.h
    src/sfutil/getopt_long.c
    src/sfutil/intel-soft-cpm.c
    src/sfutil/intel-soft-cpm.h
    src/sfutil/ipobj.c
    src/sfutil/ipobj.h
    src/sfutil/md5.c
    src/sfutil/md5.h
    src/sfutil/mpse.c
    src/sfutil/mpse.h
    src/sfutil/mpse_methods.h
    src/sfutil/segment_mem.c
    src/sfutil/segment_mem.h
    src/sfutil/sf_base64decode.c
    src/sfutil/sf_base64decode.h
    src/sfutil/sf_email_attach_decode.c
    src/sfutil/sf_email_attach_decode.h
    src/sfutil/sf_ip.c
    src/sfutil/sf_ip.h
    src/sfutil/sf_iph.c
    src/sfutil/sf_iph.h
    src/sfutil/sf_ipvar.c
    src/sfutil/sf_ipvar.h
    src/sfutil/sf_sechash.c
    src/sfutil/sf_sechash.h
    src/sfutil/sf_seqnums.h
    src/sfutil/sf_textlog.c
    src/sfutil/sf_textlog.h
    src/sfutil/sf_vartable.c
    src/sfutil/sf_vartable.h
    src/sfutil/sfActionQueue.c
    src/sfutil/sfActionQueue.h
    src/sfutil/sfdebug.h
    src/sfutil/sfeventq.c
    src/sfutil/sfeventq.h
    src/sfutil/sfghash.c
    src/sfutil/sfghash.h
    src/sfutil/sfhashfcn.c
    src/sfutil/sfhashfcn.h
    src/sfutil/sfksearch.c
    src/sfutil/sfksearch.h
    src/sfutil/sflsq.c
    src/sfutil/sflsq.h
    src/sfutil/sfmemcap.c
    src/sfutil/sfmemcap.h
    src/sfutil/sfPolicy.c
    src/sfutil/sfPolicy.h
    src/sfutil/sfPolicyData.h
    src/sfutil/sfPolicyUserData.c
    src/sfutil/sfPolicyUserData.h
    src/sfutil/sfportobject.c
    src/sfutil/sfportobject.h
    src/sfutil/sfprimetable.c
    src/sfutil/sfprimetable.h
    src/sfutil/sfrf.c
    src/sfutil/sfrf.h
    src/sfutil/sfrim.c
    src/sfutil/sfrim.h
    src/sfutil/sfrt.c
    src/sfutil/sfrt.h
    src/sfutil/sfrt_dir.c
    src/sfutil/sfrt_dir.h
    src/sfutil/sfrt_flat.c
    src/sfutil/sfrt_flat.h
    src/sfutil/sfrt_flat_dir.c
    src/sfutil/sfrt_flat_dir.h
    src/sfutil/sfrt_trie.h
    src/sfutil/sfsnprintfappend.c
    src/sfutil/sfsnprintfappend.h
    src/sfutil/sfthd.c
    src/sfutil/sfthd.h
    src/sfutil/sfxhash.c
    src/sfutil/sfxhash.h
    src/sfutil/sha2.c
    src/sfutil/sha2.h
    src/sfutil/strvec.c
    src/sfutil/strvec.h
    src/sfutil/Unified2_common.h
    src/sfutil/util_jsnorm.c
    src/sfutil/util_jsnorm.h
    src/sfutil/util_math.c
    src/sfutil/util_math.h
    src/sfutil/util_net.c
    src/sfutil/util_net.h
    src/sfutil/util_str.c
    src/sfutil/util_str.h
    src/sfutil/util_unfold.c
    src/sfutil/util_unfold.h
    src/sfutil/util_utf.c
    src/sfutil/util_utf.h
    src/side-channel/dynamic-plugins/sf_dynamic_side_channel_lib.c
    src/side-channel/dynamic-plugins/sf_dynamic_side_channel_lib.h
    src/side-channel/dynamic-plugins/sf_side_channel_info.h
    src/side-channel/plugins/sscm_logger.c
    src/side-channel/plugins/sscm_logger.h
    src/side-channel/dmq.c
    src/side-channel/dmq.h
    src/side-channel/rbmq.c
    src/side-channel/rbmq.h
    src/side-channel/sidechannel.c
    src/side-channel/sidechannel.h
    src/side-channel/sidechannel_define.h
    src/target-based/sf_attribute_table.c
    src/target-based/sf_attribute_table.h
    src/target-based/sf_attribute_table_parser.c
    src/target-based/sftarget_hostentry.c
    src/target-based/sftarget_hostentry.h
    src/target-based/sftarget_protocol_reference.c
    src/target-based/sftarget_protocol_reference.h
    src/target-based/sftarget_reader.c
    src/target-based/sftarget_reader.h
    src/target-based/y.tab.c
    src/win32/WIN32-Code/getopt.c
    src/win32/WIN32-Code/getopt_long.c
    src/win32/WIN32-Code/inet_aton.c
    src/win32/WIN32-Code/inet_pton.c
    src/win32/WIN32-Code/misc.c
    src/win32/WIN32-Code/name.h
    src/win32/WIN32-Code/strtok_r.c
    src/win32/WIN32-Code/syslog.c
    src/win32/WIN32-Code/win32_service.c
    src/win32/WIN32-Includes/libdnet/dnet/addr.h
    src/win32/WIN32-Includes/libdnet/dnet/arp.h
    src/win32/WIN32-Includes/libdnet/dnet/blob.h
    src/win32/WIN32-Includes/libdnet/dnet/eth.h
    src/win32/WIN32-Includes/libdnet/dnet/fw.h
    src/win32/WIN32-Includes/libdnet/dnet/icmp.h
    src/win32/WIN32-Includes/libdnet/dnet/intf.h
    src/win32/WIN32-Includes/libdnet/dnet/ip.h
    src/win32/WIN32-Includes/libdnet/dnet/ip6.h
    src/win32/WIN32-Includes/libdnet/dnet/os.h
    src/win32/WIN32-Includes/libdnet/dnet/rand.h
    src/win32/WIN32-Includes/libdnet/dnet/route.h
    src/win32/WIN32-Includes/libdnet/dnet/tcp.h
    src/win32/WIN32-Includes/libdnet/dnet/tun.h
    src/win32/WIN32-Includes/libdnet/dnet/udp.h
    src/win32/WIN32-Includes/libdnet/dnet.h
    src/win32/WIN32-Includes/NET/Bpf.h
    src/win32/WIN32-Includes/NETINET/IF_ETHER.H
    src/win32/WIN32-Includes/NETINET/IN_SYSTM.H
    src/win32/WIN32-Includes/NETINET/IP.H
    src/win32/WIN32-Includes/NETINET/IP_ICMP.H
    src/win32/WIN32-Includes/NETINET/IP_VAR.H
    src/win32/WIN32-Includes/NETINET/TCP.H
    src/win32/WIN32-Includes/NETINET/TCP_VAR.H
    src/win32/WIN32-Includes/NETINET/TCPIP.H
    src/win32/WIN32-Includes/NETINET/UDP.H
    src/win32/WIN32-Includes/NETINET/UDP_VAR.H
    src/win32/WIN32-Includes/rpc/auth.h
    src/win32/WIN32-Includes/rpc/auth_unix.h
    src/win32/WIN32-Includes/rpc/clnt.h
    src/win32/WIN32-Includes/rpc/pmap_clnt.h
    src/win32/WIN32-Includes/rpc/pmap_prot.h
    src/win32/WIN32-Includes/rpc/pmap_rmt.h
    src/win32/WIN32-Includes/rpc/rpc.h
    src/win32/WIN32-Includes/rpc/rpc_des.h
    src/win32/WIN32-Includes/rpc/rpc_msg.h
    src/win32/WIN32-Includes/rpc/svc.h
    src/win32/WIN32-Includes/rpc/svc_auth.h
    src/win32/WIN32-Includes/rpc/types.h
    src/win32/WIN32-Includes/rpc/xdr.h
    src/win32/WIN32-Includes/WinPCAP/pcap/bluetooth.h
    src/win32/WIN32-Includes/WinPCAP/pcap/bpf.h
    src/win32/WIN32-Includes/WinPCAP/pcap/namedb.h
    src/win32/WIN32-Includes/WinPCAP/pcap/pcap.h
    src/win32/WIN32-Includes/WinPCAP/pcap/sll.h
    src/win32/WIN32-Includes/WinPCAP/pcap/usb.h
    src/win32/WIN32-Includes/WinPCAP/pcap/vlan.h
    src/win32/WIN32-Includes/WinPCAP/bittypes.h
    src/win32/WIN32-Includes/WinPCAP/bucket_lookup.h
    src/win32/WIN32-Includes/WinPCAP/count_packets.h
    src/win32/WIN32-Includes/WinPCAP/Devioctl.h
    src/win32/WIN32-Includes/WinPCAP/Gnuc.h
    src/win32/WIN32-Includes/WinPCAP/ip6_misc.h
    src/win32/WIN32-Includes/WinPCAP/memory_t.h
    src/win32/WIN32-Includes/WinPCAP/normal_lookup.h
    src/win32/WIN32-Includes/WinPCAP/Ntddndis.h
    src/win32/WIN32-Includes/WinPCAP/Ntddpack.h
    src/win32/WIN32-Includes/WinPCAP/Packet32.h
    src/win32/WIN32-Includes/WinPCAP/pcap-bpf.h
    src/win32/WIN32-Includes/WinPCAP/pcap-int.h
    src/win32/WIN32-Includes/WinPCAP/pcap-namedb.h
    src/win32/WIN32-Includes/WinPCAP/pcap-stdinc.h
    src/win32/WIN32-Includes/WinPCAP/pcap.h
    src/win32/WIN32-Includes/WinPCAP/pthread.h
    src/win32/WIN32-Includes/WinPCAP/remote-ext.h
    src/win32/WIN32-Includes/WinPCAP/sched.h
    src/win32/WIN32-Includes/WinPCAP/semaphore.h
    src/win32/WIN32-Includes/WinPCAP/tcp_session.h
    src/win32/WIN32-Includes/WinPCAP/time_calls.h
    src/win32/WIN32-Includes/WinPCAP/tme.h
    src/win32/WIN32-Includes/WinPCAP/Win32-Extensions.h
    src/win32/WIN32-Includes/zlib/zconf.h
    src/win32/WIN32-Includes/zlib/zlib.h
    src/win32/WIN32-Includes/config.h
    src/win32/WIN32-Includes/getopt.h
    src/win32/WIN32-Includes/getopt1.h
    src/win32/WIN32-Includes/gnuc.h
    src/win32/WIN32-Includes/inttypes.h
    src/win32/WIN32-Includes/pcre.h
    src/win32/WIN32-Includes/pcreposix.h
    src/win32/WIN32-Includes/stdint.h
    src/win32/WIN32-Includes/syslog.h
    src/win32/WIN32-Includes/unistd.h
    src/active.c
    src/active.h
    src/appIdApi.h
    src/build.h
    src/byte_extract.c
    src/byte_extract.h
    src/cdefs.h
    src/checksum.h
    src/cpuclock.h
    src/debug.c
    src/decode.c
    src/decode.h
    src/detect.c
    src/detect.h
    src/detection_filter.c
    src/detection_filter.h
    src/detection_util.c
    src/detection_util.h
    src/dump.c
    src/dump.h
    src/encode.c
    src/encode.h
    src/event.h
    src/event_queue.c
    src/event_queue.h
    src/event_wrapper.c
    src/event_wrapper.h
    src/fpcreate.c
    src/fpcreate.h
    src/fpdetect.c
    src/fpdetect.h
    src/generators.h
    src/hashstring.c
    src/hashstring.h
    src/idle_processing.c
    src/idle_processing.h
    src/idle_processing_funcs.h
    src/ipv6_port.h
    src/log.c
    src/log.h
    src/log_text.c
    src/log_text.h
    src/mempool.c
    src/mempool.h
    src/mstring.c
    src/mstring.h
    src/obfuscation.c
    src/obfuscation.h
    src/packet_time.c
    src/packet_time.h
    src/parser.c
    src/parser.h
    src/pcap_pkthdr32.h
    src/pcrm.c
    src/pcrm.h
    src/plugbase.c
    src/plugbase.h
    src/plugin_enum.h
    src/ppm.c
    src/ppm.h
    src/preprocids.h
    src/profiler.c
    src/profiler.h
    src/rate_filter.c
    src/rate_filter.h
    src/rule_option_types.h
    src/rules.h
    src/sf_protocols.h
    src/sf_sdlist.c
    src/sf_sdlist.h
    src/sf_sdlist_types.h
    src/sf_types.h
    src/sfdaq.c
    src/sfdaq.h
    src/sfthreshold.c
    src/sfthreshold.h
    src/signature.c
    src/signature.h
    src/snort.c
    src/snort.h
    src/snort_bounds.h
    src/snort_debug.h
    src/snprintf.c
    src/snprintf.h
    src/spo_plugbase.h
    src/strlcatu.c
    src/strlcatu.h
    src/strlcpyu.c
    src/strlcpyu.h
    src/tag.c
    src/tag.h
    src/timersub.h
    src/treenodes.h
    src/util.c
    src/util.h
    templates/sp_template.c
    templates/sp_template.h
    templates/spp_template.c
    templates/spp_template.h
    tools/control/sfcontrol.c
    tools/control/snort_dump_packets.c
    tools/file_server/file_server.c
    tools/u2boat/u2boat.c
    tools/u2boat/u2boat.h
    tools/u2openappid/u2openappid.c
    tools/u2spewfoo/u2spewfoo.c
    tools/u2streamer/sf_error.c
    tools/u2streamer/sf_error.h
    tools/u2streamer/SpoolFileIterator.c
    tools/u2streamer/SpoolFileIterator.h
    tools/u2streamer/TimestampedFile.c
    tools/u2streamer/TimestampedFile.h
    tools/u2streamer/u2streamer.c
    tools/u2streamer/Unified2.c
    tools/u2streamer/Unified2.h
    tools/u2streamer/Unified2File.c
    tools/u2streamer/Unified2File.h
    tools/u2streamer/UnifiedLog.c
    tools/u2streamer/UnifiedLog.h
    config.h)

add_executable(snort_2_9_8_0 ${SOURCE_FILES})